# rdownloader

./: .gitignore  Cargo.toml  README.md  log4rs.yaml  package-lock.json
crates/rdownloader/: Cargo.toml
crates/rdownloader-cli/: Cargo.toml
crates/rdownloader-cli/src/: main.rs
crates/rdownloader-dispatcher/: Cargo.toml
crates/rdownloader-dispatcher/src/: lib.rs
crates/rdownloader-http/: Cargo.toml
crates/rdownloader-http/src/: lib.rs
crates/rdownloader-utils/: Cargo.toml
crates/rdownloader-utils/src/: lib.rs
crates/rdownloader/src/: lib.rs
